errors/src/main/java/com/example/errors/rest/StudentController.java
package com.example.errors.rest;

import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
public class StudentController {

    @GetMapping("/student")
    public ResponseEntity<Student> getStudent(){
        throw new StudentNotFoundException("No student available");
    }

}
